# ARIAC_Group3

./: README.md
final_group3/: CMakeLists.txt  package.xml
final_group3/config/: rgb_sensors.yaml
final_group3/final_group3/: yolo_interface.py
final_group3/include/: floor_robot_cpp.hpp
final_group3/launch/: final_group3.launch.py
final_group3/script/: yolo.py
final_group3/src/: floor_robot_cpp.cpp  main.cpp
final_group3/srv/: AdvancedCamera.srv
rwa3_group3/: CMakeLists.txt  README .md  package.xml
rwa3_group3/include/rwa3_group3/: competitor_interface.hpp
rwa3_group3/launch/: rwa3_group3.launch.py
rwa3_group3/src/: competition_demo.cpp  utils_demo.cpp
rwa4_group3/: CMakeLists.txt  Readme.md  package.xml
rwa4_group3/include/rwa4_group3/: competitor_interface.hpp  utils_interface.hpp
rwa4_group3/launch/: rwa4_group3.launch.py
rwa4_group3/src/: competition_demo.cpp  utils_demo.cpp
rwa5_group3/: package.xml
rwa5_group3/config/: rgb_sensors.yaml
rwa5_group3/include/: floor_robot_cpp.hpp
rwa5_group3/launch/: rwa5_group3.launch.py
rwa5_group3/rwa5_group3/: yolo_interface.py
rwa5_group3/script/: yolo.py
rwa5_group3/src/: floor_robot_cpp.cpp  main.cpp
rwa5_packages/: README.md
rwa5_packages/rwa5_group3/: CMakeLists.txt  package.xml
rwa5_packages/rwa5_group3/include/: floor_robot_cpp.hpp  floor_robot_cpp_only.hpp  utils.hpp
rwa5_packages/rwa5_group3/launch/: demo_cpp.launch.py  rwa5_group3.launch.py
rwa5_packages/rwa5_group3/rwa5_group3/: floor_robot_interface.py  yolo_interface.py
rwa5_packages/rwa5_group3/script/: floor_robot_demo.py  yolo.py
rwa5_packages/rwa5_group3/src/: floor_robot_cpp.cpp  floor_robot_cpp_only.cpp  main.cpp  main_cpp_only.cpp
rwa5_packages/rwa5_group3/srv/: AdvancedCamera.srv
